Bug 1850243 - Add 'telemetry' keyword to data upload pref UI to aid discoverability r=Gijs,fluent-reviewers,settings-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D187680

--- a/browser/components/preferences/privacy.inc.xhtml
+++ b/browser/components/preferences/privacy.inc.xhtml
@@ -1006,11 +1006,11 @@
       class="subcategory"
       hidden="true"
       data-category="panePrivacy">
-  <html:h1 data-l10n-id="collection-header"/>
+  <html:h1 data-l10n-id="collection-header2" data-l10n-attrs="searchkeywords"/>
 </hbox>
 
 <groupbox id="dataCollectionGroup" data-category="panePrivacy" hidden="true">
-  <label class="search-header" hidden="true"><html:h2 data-l10n-id="collection-header"/></label>
+  <label class="search-header" hidden="true"><html:h2 data-l10n-id="collection-header2" data-l10n-attrs="searchkeywords"/></label>
 
   <description>
     <label class="tail-with-learn-more" data-l10n-id="collection-description"/>
