--- a/toolkit/components/resistfingerprinting/tests/test_spoof_english.html
+++ b/toolkit/components/resistfingerprinting/tests/test_spoof_english.html
@@ -20,7 +20,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=1486258
 </pre>
 
 <script type="text/javascript">
-/* global SpecialPowers */
+/* global SpecialPowers, content */
 
 const { BrowserTestUtils } = ChromeUtils.importESModule(
   "resource://testing-common/BrowserTestUtils.sys.mjs"
@@ -35,11 +35,12 @@ const kSpoofEnglish = 2;
 async function runTest(locale) {
   return BrowserTestUtils.withNewTab("http://example.com/", browser => {
     return SpecialPowers.spawn(browser, [locale], _locale => {
-      return {
-        locale: new Intl.PluralRules(_locale).resolvedOptions().locale,
-        weekday: new Date(0).toLocaleString(_locale, {weekday: "long"}),
-        currency: Number(1000).toLocaleString(_locale, {currency: "USD"}),
-      };
+      let locale = JSON.stringify(_locale);
+      return content.eval(`({
+        locale: new Intl.PluralRules(${locale}).resolvedOptions().locale,
+        weekday: new Date(0).toLocaleString(${locale}, {weekday: "long"}),
+        currency: Number(1000).toLocaleString(${locale}, {currency: "USD"}),
+      })`);
     });
   });
 }
@@ -89,11 +90,11 @@ async function clearLocale() {
   let enResults = await runTest("en-US");
   is(enResults.locale, "en-US", "default locale");
 
-  let deResults = await runTest("de");
-  is(deResults.locale, "de", "default locale");
+  let deResults = await runTest("de-DE");
+  is(deResults.locale, "de-DE", "default locale");
 
   // 3. set system locale to German
-  await setupLocale("de");
+  await setupLocale("de-DE");
 
   // 4. log non-spoofed results
   let nonSpoofedResults = await runSpoofTest(kDoNotSpoof);
