Bug 1849697 - Increasing color contrast for the Re-analyze reviews link for dark theme. r=desktop-theme-reviewers,shopping-reviewers,dao,reusable-components-reviewers,hjones,mstriemer,Gijs
While the message content is likely to be changed and the link removed/replaced, we could still provide better experience for users in the meantime.

Differential Revision: https://phabricator.services.mozilla.com/D187632

--- a/toolkit/content/widgets/message-bar.css
+++ b/toolkit/content/widgets/message-bar.css
@@ -140,6 +140,9 @@
   /* Colors from: https://design.firefox.com/photon/components/message-bars.html#type-specific-style */
 
   :host([type=warning]:not([message-bar-type=infobar])) {
+    /* Ensure colors within the bar are adjusted and controls are readable */
+    color-scheme: light;
+
     --message-bar-background-color: var(--yellow-50);
     --message-bar-text-color: var(--yellow-90);
 
@@ -151,6 +154,9 @@
   }
 
   :host([type=success]:not([message-bar-type=infobar])) {
+    /* Ensure colors within the bar are adjusted and controls are readable */
+    color-scheme: light;
+
     --message-bar-background-color: var(--green-50);
     --message-bar-text-color: var(--green-90);
 
