--- a/browser/themes/shared/browser-custom-colors.css
+++ b/browser/themes/shared/browser-custom-colors.css
@@ -40,7 +40,7 @@
       color-mix(in srgb, currentColor 14%, transparent)
     );
 
-    --panel-shortcut-color: rgb(91, 91, 102);
+    --panel-shortcut-color: light-dark(rgb(91, 91, 102), rgb(251, 251, 254));
 
     --input-color: light-dark(rgb(21, 20, 26), rgb(251, 251, 254));
     --input-bgcolor: light-dark(rgb(255, 255, 255), #42414d);
