--- a/toolkit/components/antitracking/bouncetrackingprotection/test/browser/file_bounce.html
+++ b/toolkit/components/antitracking/bouncetrackingprotection/test/browser/file_bounce.html
@@ -20,29 +20,16 @@
           redirectDelay = 50;
         }
 
-        let setState = url.searchParams.get("setState");
-        if (setState) {
-          let id = Math.random().toString();
+        let setCookie = url.searchParams.get("setCookie");
+        if (setCookie) {
+          let cookie = document.cookie;
 
-          if (setState == "cookie-client") {
-            let cookie = document.cookie;
-
-            if (cookie) {
-              console.info("Received cookie", cookie);
-            } else {
-              let newCookie = `id=${id}`;
-              console.info("Setting new cookie", newCookie);
-              document.cookie = newCookie;
-            }
-          } else if (setState == "localStorage") {
-            let entry = localStorage.getItem("id");
-
-            if (entry) {
-              console.info("Found localStorage entry. id", entry);
-            } else {
-              console.info("Setting new localStorage entry. id", id);
-              localStorage.setItem(id, id);
-            }
+          if (cookie) {
+            console.info("Received cookie", cookie);
+          } else {
+            let newCookie = `id=${Math.random()}`;
+            console.info("Setting new cookie", newCookie);
+            document.cookie = newCookie;
           }
         }
 
