--- a/layout/tables/test/test_bug1832110.html
+++ b/layout/tables/test/test_bug1832110.html
@@ -45,7 +45,7 @@ function raf() {
 }
 
 async function show_table(table, other) {
-  // Don't tempt subpixel snapping - try to position each table exactly the same.
+  // TODO(dshin): Once bug 1825384 resolves, this should not be needed.
   table.classList.remove("hide");
   other.classList.add("hide");
   getComputedStyle(table).getPropertyValue("display");
