--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -83,6 +83,18 @@
   --lwt-background-tiling: no-repeat;
 
   --ext-theme-background-transition: background-color 0.1s cubic-bezier(.17,.67,.83,.67);
+  --inactive-titlebar-opacity: .6;
+  /**
+   * On macOS and Linux, fading the whole titlebar is the native behavior.
+   *
+   * On Windows there's no particular standard, but the default .6 opacity
+   * feels like too much, specially because Windows "fades" the titlebar of
+   * unresponsive applications. Fade substantially less the titlebar on windows
+   * to account for this platform difference.
+   */
+  @media (-moz-platform: windows) {
+    --inactive-titlebar-opacity: .75;
+  }
 
   &:where([tabsintitlebar]) {
     --toolbox-non-lwt-bgcolor: ActiveCaption;
@@ -184,7 +196,7 @@
 }
 
 :root[tabsintitlebar] #titlebar:-moz-window-inactive {
-  opacity: .6;
+  opacity: var(--inactive-titlebar-opacity);
 }
 
 /* Add space to beginning of toolbar and make that space click the first <toolbarbutton> */
