--- a/browser/components/extensions/extension-mac.css
+++ b/browser/components/extensions/extension-mac.css
@@ -2,14 +2,18 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-button.browser-style,
-select.browser-style,
-.browser-style > input[type="checkbox"] {
-  border-radius: 4px;
-}
+@layer { /* to have lower precedence compared to any extension style sheet */
 
-.panel-section-footer {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  overflow: hidden;
-}
+  button.browser-style,
+  select.browser-style,
+  .browser-style > input[type="checkbox"] {
+    border-radius: 4px;
+  }
+
+  .panel-section-footer {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    overflow: hidden;
+  }
+
+} /* end of @layer */
